[gd_scene load_steps=17 format=3 uid="uid://b6jmehc1equ7l"]

[ext_resource type="Texture2D" uid="uid://bwgta6uwa3qbn" path="res://addons/Ui/Banners/Carved_3Slides.png" id="1_2cw7m"]
[ext_resource type="Script" path="res://ui/game_over_ui.gd" id="1_ggec4"]
[ext_resource type="Texture2D" uid="uid://c3283mf1ug078" path="res://addons/Ui/Banners/Banner_Horizontal.png" id="2_we1ay"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_dsats"]
texture = ExtResource("1_2cw7m")
texture_margin_left = 176.0
texture_margin_top = 16.0
texture_margin_right = 176.0
texture_margin_bottom = 16.0
axis_stretch_vertical = 2

[sub_resource type="SystemFont" id="SystemFont_hdqde"]
font_names = PackedStringArray("Good Times")
subpixel_positioning = 0

[sub_resource type="LabelSettings" id="LabelSettings_jqv2s"]
font = SubResource("SystemFont_hdqde")
font_size = 50
font_color = Color(0.318425, 0.0878102, 0.0283853, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_erl4r"]
texture = ExtResource("2_we1ay")
texture_margin_left = 32.0
texture_margin_top = 16.0
texture_margin_right = 32.0
texture_margin_bottom = 48.0
axis_stretch_horizontal = 2
axis_stretch_vertical = 2
region_rect = Rect2(32, 48, 128, 128)

[sub_resource type="SystemFont" id="SystemFont_3d4no"]
font_names = PackedStringArray("Good Times")
font_weight = 999
subpixel_positioning = 0

[sub_resource type="LabelSettings" id="LabelSettings_d42yf"]
font = SubResource("SystemFont_3d4no")
font_size = 21
font_color = Color(0.0110876, 0.0110876, 0.0110876, 1)
outline_size = 1
shadow_color = Color(0.94902, 0.235294, 0.294118, 0.027451)

[sub_resource type="LabelSettings" id="LabelSettings_y56dx"]
font = SubResource("SystemFont_3d4no")
font_size = 21
font_color = Color(1, 0.258824, 0.305882, 1)
outline_size = 2
outline_color = Color(0, 0, 0, 0.964706)

[sub_resource type="LabelSettings" id="LabelSettings_615xt"]
font = SubResource("SystemFont_3d4no")
font_size = 21
font_color = Color(1, 0.258824, 0.305882, 1)
outline_size = 2
outline_color = Color(0, 0, 0, 0.964706)
shadow_color = Color(0.94902, 0.235294, 0.294118, 0.027451)

[sub_resource type="LabelSettings" id="LabelSettings_r6c8h"]
font = SubResource("SystemFont_3d4no")
font_size = 21
font_color = Color(1, 0.258824, 0.305882, 1)
outline_size = 2
outline_color = Color(0, 0, 0, 0.968627)
shadow_color = Color(0.94902, 0.235294, 0.294118, 0.027451)

[sub_resource type="LabelSettings" id="LabelSettings_3ro51"]
font = SubResource("SystemFont_3d4no")
font_size = 21
font_color = Color(1, 0.258824, 0.305882, 1)
outline_size = 2
outline_color = Color(0, 0, 0, 0.964706)
shadow_color = Color(0.94902, 0.235294, 0.294118, 0.027451)

[sub_resource type="Animation" id="Animation_x3s2m"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TopPanel:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(332.5, 34)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BottomPanel:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(344.5, 387)]
}

[sub_resource type="Animation" id="Animation_wsiag"]
resource_name = "default"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.329877, 3.36359),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 0.894118)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TopPanel:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.233258, 1),
"update": 0,
"values": [Vector2(335, -212), Vector2(332.5, 34)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BottomPanel:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.3, 1),
"transitions": PackedFloat32Array(0.366022, 1),
"update": 0,
"values": [Vector2(335, 720), Vector2(344.5, 387)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rw8ag"]
_data = {
"RESET": SubResource("Animation_x3s2m"),
"default": SubResource("Animation_wsiag")
}

[node name="GameOverUI" type="CanvasLayer"]
script = ExtResource("1_ggec4")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0)

[node name="TopPanel" type="Panel" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 332.5
offset_top = 34.0
offset_right = 819.5
offset_bottom = 134.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_dsats")

[node name="GameOverLabel" type="Label" parent="TopPanel"]
layout_mode = 0
offset_left = 54.5
offset_top = 21.0
offset_right = 433.5
offset_bottom = 82.0
text = "GAME OVER"
label_settings = SubResource("LabelSettings_jqv2s")
horizontal_alignment = 1
vertical_alignment = 1

[node name="BottomPanel" type="Panel" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 344.5
offset_top = 387.0
offset_right = 807.5
offset_bottom = 621.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxTexture_erl4r")

[node name="CenterContainer" type="CenterContainer" parent="BottomPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -190.0
offset_top = -91.0
offset_right = 199.0
offset_bottom = 58.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="BottomPanel/CenterContainer"]
layout_mode = 2
theme_override_constants/h_separation = 25
theme_override_constants/v_separation = 15
columns = 2

[node name="Label" type="Label" parent="BottomPanel/CenterContainer/GridContainer"]
layout_mode = 2
text = "Time Survived: "
label_settings = SubResource("LabelSettings_d42yf")

[node name="TimeLabel" type="Label" parent="BottomPanel/CenterContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "2:24"
label_settings = SubResource("LabelSettings_y56dx")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="BottomPanel/CenterContainer/GridContainer"]
layout_mode = 2
text = "Monster Defeated: "
label_settings = SubResource("LabelSettings_d42yf")

[node name="MonstersLabel" type="Label" parent="BottomPanel/CenterContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "999"
label_settings = SubResource("LabelSettings_615xt")

[node name="Label3" type="Label" parent="BottomPanel/CenterContainer/GridContainer"]
layout_mode = 2
text = "Diamonds Collected"
label_settings = SubResource("LabelSettings_d42yf")

[node name="DiamondLabel" type="Label" parent="BottomPanel/CenterContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "999"
label_settings = SubResource("LabelSettings_r6c8h")

[node name="Label4" type="Label" parent="BottomPanel/CenterContainer/GridContainer"]
layout_mode = 2
text = "hearts collected"
label_settings = SubResource("LabelSettings_d42yf")

[node name="HeartsLabel" type="Label" parent="BottomPanel/CenterContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "999"
label_settings = SubResource("LabelSettings_3ro51")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_rw8ag")
}
autoplay = "default"
